[package]
name = "net-sync"
version = "0.0.0"
authors = ["Timon Post <timonpost@hotmail.nl>"]
edition = "2018"
description = "Syncronizes type data modifications accross the network."
keywords = ["sync", "entity-sync", "network", "ecs", "component"]
exclude = ["target", "Cargo.lock"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["lz4-compresion"]
bincode-serialization = ["track/bincode"]
rmp-serialization = ["track/rmp-serde"]
lz4-compresion = ["lz4-compress"]

[dependencies]
lz4-compress = {version = "0.1.1", optional = true}
track = { version = "0.0.0", path = "../track" }

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "bench_main"
harness = false