[package]
name = "net-sync"
version = "0.0.1"
authors = ["Timon Post <timonpost@hotmail.nl>"]
edition = "2018"
description = "Abstraction for synchronizing game-entities across the network."
keywords = ["sync", "entity-sync", "network", "ecs", "component"]
exclude = ["target", "Cargo.lock"]
license = "MIT"
repository = "https://github.com/entity-sync-rs/net-sync/"
documentation = "https://docs.rs/net-sync/"
readme = "README.md"

[features]
default = ["lz4-compresion"]
lz4-compresion = ["lz4-compress"]

[dependencies]
lz4-compress = {version = "0.1.1", optional = true}
track = { version = "0.1.0", path = "../track" }
serde = "1"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "bench_main"
harness = false