[package]
name = "net-sync"
version = "0.0.1"
authors = ["Timon Post <timonpost@hotmail.nl>"]
edition = "2018"
description = "Abstraction for synchronizing game-entities across the network."
keywords = ["sync", "entity-sync", "network", "ecs", "component"]
exclude = ["target", "Cargo.lock"]
license = "MIT"
repository = "https://github.com/entity-sync-rs/net-sync"
documentation = "https://docs.rs/net-sync/"
readme = "README.md"

[features]
default = ["lz4-compresion", "bincode-serialization"]
lz4-compresion = ["lz4-compress"]
bincode-serialization = ["bincode"]
rmp-serialization = ["rmp-serde"]

[dependencies]
serde = "1"
bit-set = "0.5"
log = "0.4.8"
track-macro = { version = "0.1.0", path = "../track-macro" }
serde-diff = { version = "0.2.0"  }

# compressorts
lz4-compress = {version = "0.1.1", optional = true}

# serializers
rmp-serde = {version = "0.14.2", optional = true }
bincode = { version = "1.2.1", optional = true }

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "bench_main"
harness = false